--- a/index.html
+++ b/index.html
@@ -2,64 +2,162 @@
 <html>
   <head>
     <title>My Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
-      <h1>My Page</h1>
+      <h1>Grupo 6</h1>
     </header>
-    <!-- test asdfsdf-->
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#A">Alan</a></li>
-      <li><a href="#B">Luis</a></li>
-      <li><a href="#C">Xavier</a></li>
-      <li><a href="#D">Eliecer</a></li>
-      <li><a href="#E">Alan Geraldo</a></li>
-      <li><a href="#F">Shandon</a></li>
-
-    </ul>
-    <section>
-    <h2 id="A">Alan Guadalupe Soto Gastelum</h2>
+    <div class="options-bar">
+      <span><a href="#"> Home</a></span>
+      <span><a href="#A"> Alan</a></span>
+      <span><a href="#B"> Luis</a></span>
+      <span><a href="#C"> Xavier</a></span>
+      <span><a href="#D"> Eliecer</a></span>
+      <span><a href="#E"> Alan </a></span>
+      <span><a href="#F"> Shandon</a></span>
+    </div>
+<div>
+  
+  <section class="box">
+    <h2 id="A">Alan Soto </h2>
     <h3>Descripcion</h3>
     <p>Mi nombre es Alan Gpe Soto Gastelum, soy de Sinaloa, Mexico. Tengo 32 años, en mis ratos libres me gusta el jugar videojuegos mi deporte favorito es Baseball</p>
-    </section>
-
-    <section>
-    <h2 id="B">Luis Alberto Lara Gonzalez</h2>
+    <img src="https://ca.slack-edge.com/T0589AF80FQ-U058YLMBENA-198bcef437fc-512" alt="">
+  </section>
+  
+  <section class="box">
+    <h2 id="B">Luis Lara </h2>
     <h3>Descripcion</h3>
     <p>Hola mi nombre es Luis Alberto Lara Gonzalez, soy de Mexico tengo 25 años, me gusta jugar videojuegos en mi computadora, escuchar musica y ver peliculas los fines de semana</p>
-    </section>
-
-    <section>
-      <h2 id="C">Xavier Alberto Castillo Varon</h2>
-      <h3>Descripcion</h3>
-      <p>¡Hola! Mi nombre es Xavier Alberto Castillo Varón, soy colombiano y me complace compartirles un poco sobre mí en esta presentación.
-          Una de mis grandes pasiones es el ciclismo. Me encanta subirme a mi bicicleta y recorrer diferentes rutas, explorando nuevos paisajes y desafiando mis propios límites. El ciclismo me brinda una sensación de libertad y aventura que no encuentro en ninguna otra actividad.
-          Además de ser un apasionado del ciclismo, también soy tecnólogo en ADSI (Análisis y Desarrollo de Sistemas de Información). A lo largo de mi carrera, he adquirido conocimientos intermedios en Python, Django, SQL y Git/GitHub. Estas herramientas me permiten desarrollar aplicaciones web de manera eficiente y efectiva.
-          Además, cuento con conocimientos básicos en HTML, CSS3 y JavaScript. Estos lenguajes de programación me permiten dar vida a mis proyectos web y hacer que sean más atractivos y dinámicos para los usuarios.
-          Una de las cosas que me caracteriza es mi naturaleza autodidacta. Siempre estoy buscando nuevas oportunidades para aprender y mejorar mis habilidades. Me encanta sumergirme en libros, cursos en línea y proyectos personales que me desafíen y me permitan expandir mis conocimientos.
-          En resumen, soy Xavier Alberto Castillo Varón, un colombiano amante del ciclismo, tecnólogo en ADSI con conocimientos intermedios en Python, Django, SQL y Git/GitHub, y habilidades básicas en HTML, CSS3 y JavaScript. Mi enfoque autodidacta me impulsa a aprender y crecer continuamente.
-          Gracias por su atención y espero tener la oportunidad de compartir más sobre mis proyectos y experiencias en el futuro.</p>
-    </section>
-
- <section>
-  <h2 id="D">Eliecer Santos</h2>
-  <h3>Descripcion</h3>
-  <p></p>
+    <img src="https://ca.slack-edge.com/T0589AF80FQ-U05A22B5MJL-82a9923b7898-512" alt="">
   </section>
-<section>
-  <h2 id="E">Francisco Alan Geraldo Ceceña</h2>
+  <section class="box">
+    <h2 id="F">Shandon Vasquez</h2>
     <h3>Descripcion</h3>
-    <p>Hola buenas tardes, soy Alan Geraldo, soy de Baja California sur, me gustan los videojuegos, pasar tiempo con mis amigos y soy una persona que le gusta aprender cosas nuevas.</p>
-</section>
-<section>
-  <h2 id="F">Shandon Vasquez</h2>
+    <p>Mi nombre es Shandon, tengo 22 años, soy de Guatemala y amo viajar y ver la naturaleza. Considero que soy un amante de la naturaleza y sus misterios.</p>
+    <img src="https://ca.slack-edge.com/T0589AF80FQ-U058QNL8S87-fccd87362d6e-512" alt="">
+  </section>
+  <section class="box">
+    <h2 id="D">Eliecer Santos</h2>
     <h3>Descripcion</h3>
-    <p>Mi  nombre es Shandon, 22 años soy de Guatemala  y amo viajar y ver la naturaleza  considero que soy un amante de la naturaleza y sus misterios</p>
-</section>
-<footer>
-  <p>My Page &copy; 2021</p>
-</footer>
+    <p>Hola mi nombre es Daniel Jose Reyes Zavala tengo 26 años soy de Venezuela estado Zulia. Trabajo como supervisor en jefe en una empresa de telecomunicaciones, conexión a internet por fibra óptica e inalámbrico.</p>
+    <img src="https://ca.slack-edge.com/T0589AF80FQ-U059V08FKFA-73fef3b5417f-512" alt="">
+  </section>
+  
+  <section class="box">
+    <h2 id="E">Francisco Geraldo </h2>
+    <h3>Descripcion</h3>
+    <p>Hola buenas tardes, soy Alan Geraldo, soy de Baja California Sur, me gustan los videojuegos, pasar tiempo con mis amigos y soy una persona a la que le gusta aprender cosas nuevas.</p>
+    <img src="https://ca.slack-edge.com/T0589AF80FQ-U058QNLBYG7-c55e2ec9c30a-512" alt="">
+  </section>
+  
+  <section class="box">
+    <h2 id="C">Xavier Castillo</h2>
+    <h3>Descripcion</h3>
+    <p>¡Hola! Mi nombre es Xavier Alberto Castillo Varón, soy colombiano y me complace compartirles un poco sobre mí en esta presentación.
+      Una de mis grandes pasiones es el ciclismo.</p>
+    <img src="https://ca.slack-edge.com/T0589AF80FQ-U0596TYEX8V-c1a0b92044a4-512" alt="">
+  </section>
+</div>
+
+    
+<!-- <div>
+  <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+ width="819.000000pt" height="518.000000pt" viewBox="0 0 819.000000 518.000000"
+ preserveAspectRatio="xMidYMid meet">
+<g transform="translate(0.000000,518.000000) scale(0.100000,-0.100000)"
+fill="#000000" stroke="none">
+<path d="M2315 4893 c-114 -25 -195 -51 -270 -87 -262 -125 -451 -369 -531
+-685 -29 -114 -26 -151 21 -221 l33 -49 -34 -7 c-18 -3 -39 -12 -45 -20 -22
+-27 6 -450 36 -550 7 -25 9 -46 4 -50 -5 -3 -9 -23 -9 -46 0 -38 -2 -40 -22
+-32 -66 23 -182 -8 -241 -64 -33 -31 -59 -111 -50 -155 8 -42 101 -295 120
+-327 8 -14 31 -37 51 -50 30 -21 47 -25 112 -25 l77 0 6 -115 c10 -197 52
+-341 143 -487 53 -86 161 -198 248 -258 31 -21 56 -44 56 -50 0 -6 -7 -36 -16
+-66 -46 -162 -57 -190 -78 -204 -54 -36 -338 -116 -546 -154 -179 -34 -235
+-48 -295 -77 -74 -34 -165 -124 -203 -199 -57 -113 -82 -240 -45 -233 11 2 20
+22 29 65 17 85 65 181 120 242 66 73 157 115 309 142 195 33 486 108 612 156
+9 3 13 -4 13 -21 0 -94 175 -263 376 -364 151 -76 237 -76 388 0 204 102 376
+270 376 367 l0 29 49 -19 c106 -40 306 -92 511 -133 245 -49 296 -70 375 -150
+69 -71 135 -211 135 -287 0 -25 21 -45 34 -32 12 12 6 72 -14 134 -41 134
+-128 243 -240 299 -68 34 -98 43 -275 75 -231 42 -559 136 -592 168 -11 12
+-65 181 -78 243 -5 28 -2 33 47 64 78 51 187 164 246 255 95 146 138 291 149
+503 5 108 8 122 22 116 9 -4 39 -9 68 -12 74 -5 133 23 166 79 39 66 127 314
+127 356 0 91 -75 169 -187 194 -47 11 -61 10 -99 -4 l-44 -16 0 49 c0 36 -4
+50 -14 50 -11 0 -9 15 10 74 12 40 30 125 39 187 18 130 33 346 25 358 -3 5
+-22 13 -42 20 -33 11 -38 17 -47 63 -7 28 -9 53 -7 55 2 3 39 -12 81 -31 122
+-56 126 -51 67 76 -71 153 -172 282 -284 364 -27 20 -47 38 -45 41 3 2 32 -3
+65 -11 75 -20 112 -20 112 -2 0 25 -83 140 -146 201 -116 115 -268 181 -441
+192 -86 6 -92 7 -78 23 26 28 -1 40 -91 40 -93 0 -224 -22 -295 -50 -54 -22
+-60 -18 -28 16 12 13 19 30 16 38 -7 16 -8 17 -42 9z m-46 -70 c-8 -10 -30
+-35 -47 -56 -25 -30 -30 -42 -22 -52 9 -11 30 -4 108 36 109 55 178 75 290 85
+l77 6 -34 -29 c-49 -42 -29 -53 81 -40 189 21 380 -41 506 -164 73 -71 117
+-127 109 -136 -4 -3 -32 -1 -64 5 -32 6 -88 14 -125 18 -63 6 -68 5 -68 -13 0
+-14 13 -26 43 -38 132 -58 275 -190 358 -331 47 -80 68 -129 52 -123 -101 43
+-155 61 -163 53 -5 -5 -3 -32 5 -66 7 -32 11 -58 8 -58 -3 0 -30 16 -58 35
+-88 58 -200 115 -308 156 -96 37 -109 39 -209 39 -124 0 -124 0 -83 -81 15
+-28 30 -61 35 -74 l9 -23 -64 29 c-83 37 -211 74 -312 90 -69 10 -90 10 -159
+-6 -114 -25 -356 -107 -489 -166 -63 -28 -121 -49 -129 -46 -24 9 -68 75 -76
+113 -17 74 50 283 137 427 113 189 283 325 497 398 99 34 115 36 95 12z m702
+-743 c142 -47 351 -161 404 -220 20 -22 21 -73 6 -365 -6 -118 -8 -127 -20
+-100 -23 54 -58 91 -118 122 -73 39 -141 53 -251 53 -91 0 -263 -30 -288 -51
+-19 -16 -18 -52 4 -77 l17 -21 75 25 c91 32 232 42 311 24 74 -17 166 -61 217
+-105 39 -34 42 -40 42 -86 l0 -50 -387 6 c-483 7 -482 7 -975 0 l-408 -6 0 23
+c0 13 9 138 20 278 11 140 20 263 20 272 0 40 352 181 599 239 l84 20 103 -21
+c157 -32 256 -69 366 -138 20 -12 30 -14 38 -6 10 10 -6 58 -67 202 -10 24
+112 14 208 -18z m505 -342 c-9 -124 -35 -328 -46 -364 -10 -30 -5 270 6 394 5
+54 8 62 26 62 20 0 21 -4 14 -92z m-1880 30 c-3 -24 -10 -110 -16 -193 -12
+-165 -20 -248 -25 -243 -10 10 -25 191 -27 316 -1 154 1 162 50 162 22 0 23
+-3 18 -42z m1407 -574 l419 -5 -4 -178 c-3 -175 -3 -178 -33 -237 -56 -109
+-163 -158 -350 -159 -176 0 -289 52 -344 160 -24 45 -26 63 -31 205 l-5 155
+-50 13 c-60 16 -211 10 -252 -10 l-28 -13 -5 -150 c-5 -137 -7 -154 -31 -200
+-57 -110 -167 -160 -349 -160 -169 0 -269 39 -332 130 -40 59 -48 107 -48 284
+l0 161 403 1 c221 0 422 4 447 9 25 4 74 6 110 4 36 -3 253 -7 483 -10z
+m-1505 -100 c21 -14 22 -21 22 -134 0 -132 15 -190 66 -257 111 -146 427 -182
+623 -72 l54 31 -7 -115 c-10 -161 6 -194 129 -257 81 -41 142 -41 221 1 95 50
+134 96 134 157 0 30 -27 53 -35 29 -2 -6 -8 -28 -15 -48 -13 -44 -27 -57 -104
+-98 -73 -39 -111 -39 -185 -2 -67 34 -111 81 -111 118 0 92 24 273 42 312 25
+55 38 140 38 252 0 70 3 88 16 93 9 3 62 6 118 6 l103 0 6 -137 c4 -88 12
+-155 22 -185 46 -133 203 -220 394 -221 210 -1 358 79 411 220 16 42 20 78 20
+168 0 111 1 114 27 134 39 32 67 35 130 15 72 -22 119 -66 129 -120 6 -31 1
+-58 -25 -134 -60 -173 -91 -239 -123 -261 -47 -34 -106 -36 -171 -6 -64 29
+-89 23 -68 -17 19 -34 7 -244 -20 -357 -71 -298 -305 -545 -604 -635 -81 -24
+-106 -27 -240 -28 -179 0 -259 18 -400 89 -161 81 -292 209 -374 365 -70 134
+-98 240 -107 418 -7 117 -6 124 15 145 38 41 6 49 -66 16 -66 -30 -134 -23
+-175 18 -37 38 -138 296 -138 354 0 74 38 121 122 150 55 20 87 18 126 -7z
+m634 -1523 c214 -98 531 -96 728 4 27 14 51 25 54 25 3 0 12 -26 21 -57 9 -32
+32 -108 52 -170 44 -136 42 -144 -62 -247 -116 -116 -288 -219 -392 -235 -68
+-10 -126 3 -218 48 -151 74 -333 233 -351 306 -4 15 6 58 24 112 16 48 40 123
+52 166 13 42 24 77 25 77 1 0 31 -13 67 -29z"/>
+<path d="M1798 3521 c-105 -34 -158 -79 -158 -133 0 -16 2 -28 4 -28 2 0 30
+16 62 35 78 47 123 59 224 59 70 -1 97 -6 154 -29 49 -20 74 -25 85 -18 17 11
+32 58 24 78 -17 45 -292 70 -395 36z"/>
+<path d="M1617 3133 c-12 -11 -8 -263 5 -304 18 -60 70 -114 136 -140 48 -19
+77 -23 177 -24 147 0 208 18 270 79 56 56 67 100 63 261 l-3 130 -321 3 c-176
+1 -323 -1 -327 -5z m611 -148 c4 -162 -18 -209 -123 -257 -43 -20 -66 -23
+-165 -23 -103 0 -121 3 -171 26 -63 30 -94 66 -108 130 -12 50 -15 222 -4 232
+4 4 133 6 287 5 l281 -3 3 -110z"/>
+<path d="M2717 3133 c-4 -3 -7 -69 -7 -147 0 -160 13 -202 78 -256 61 -50 121
+-65 257 -65 107 0 126 3 175 26 122 57 152 122 148 320 l-3 124 -321 3 c-176
+1 -323 -1 -327 -5z m608 -158 c0 -139 -15 -181 -74 -221 -114 -75 -353 -67
+-445 14 -42 37 -56 90 -56 215 l0 117 288 -2 287 -3 0 -120z"/>
+<path d="M1326 2925 c-4 -11 3 -19 22 -26 56 -20 76 -35 104 -79 32 -50 34
+-96 6 -114 -28 -17 -53 5 -53 47 0 19 -3 38 -7 42 -14 15 -38 -18 -38 -52 0
+-74 90 -111 140 -58 35 38 30 94 -14 160 -47 72 -144 120 -160 80z"/>
+<path d="M3594 2926 c-40 -18 -102 -91 -116 -138 -32 -107 80 -174 145 -86 17
+22 18 33 11 60 -12 42 -40 45 -37 3 2 -30 -20 -65 -42 -65 -26 0 -47 38 -40
+70 9 43 83 118 123 126 22 5 32 12 32 25 0 23 -30 25 -76 5z"/>
+<path d="M2823 2065 c-114 -80 -418 -92 -614 -25 -99 34 -109 36 -109 15 0 -9
+20 -24 45 -35 213 -91 547 -88 698 7 38 24 44 45 16 51 -8 1 -24 -5 -36 -13z"/>
+  <circle cx="80" cy="80" r="10" fill="black" />
+  <circle cx="120" cy="80" r="10" fill="black" />
+
+</g>
+</svg>
+
+</div> -->
+<!-- <footer>
+  <p>My Page &copy; 2023</p>
+</footer> -->
 </body>
 </html>
