--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       <h1>Grupo 6</h1>
     </header>
     <div class="options-bar">
-      <span><a href="#"> Home</a></span>
       <span><a href="#A"> Alan</a></span>
       <span><a href="#B"> Luis</a></span>
       <span><a href="#C"> Xavier</a></span>
@@ -156,8 +155,8 @@ m634 -1523 c214 -98 531 -96 728 4 27 14 51 25 54 25 3 0 12 -26 21 -57 9 -32
 </svg>
 
 </div> -->
-<!-- <footer>
+<footer>
   <p>My Page &copy; 2023</p>
-</footer> -->
+</footer>
 </body>
 </html>
